# portfolio-design-patterns

./: .gitignore  README.md
python/: pyproject.toml
python/src/patterns/cqrs/: commands.py  event_bus.py  events.py  queries.py  read_model.py  write_model.py
python/src/patterns/event_sourcing/: account.py  event_store.py  events.py
python/src/patterns/factory/: concrete_products.py  product.py  product_factory.py
python/src/patterns/observer/: observers.py  order_subject.py  subject.py
python/src/patterns/strategy/: concrete_strategies.py  context.py  strategy.py
python/src/portfolio_design_patterns_py.egg-info/: PKG-INFO  SOURCES.txt
python/tests/: test_cqrs.py  test_event_sourcing.py  test_factory.py  test_observer.py  test_strategy.py
scripts/: check.sh
typescript/: package.json  pnpm-lock.yaml  vitest.config.ts
typescript/src/patterns/cqrs/: Commands.ts  EventBus.ts  Events.ts  Queries.ts  ReadModel.ts  WriteModel.ts
typescript/src/patterns/event-sourcing/: Account.ts  EventStore.ts  Events.ts
typescript/src/patterns/factory/: ConcreteProducts.ts  Product.ts  ProductFactory.ts
typescript/src/patterns/observer/: Observers.ts  OrderSubject.ts  Subject.ts
typescript/src/patterns/strategy/: ConcreteStrategies.ts  Context.ts  Strategy.ts
typescript/tests/: cqrs.spec.ts  event-sourcing.spec.ts  factory.spec.js  factory.spec.ts  observer.spec.ts  strategy.spec.ts
